[project]
name = "calculator"
version = "0.1.0"
description = "Python library to compute things."
authors = [
    {name = "Maylis Tran",email = "maylis.tran@icm-institute.org"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [
    { include = "calculator", from = "src" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
